# Portfolio-Optimizer

./: .gitignore  pyproject.toml
.claude/: settings.local.json
scripts/: ingest_pdfs.py  run_agent.py
src/agent/: graph.py  nodes.py  state.py
src/market/: data_fetcher.py  sentiment.py  ticker_resolver.py
src/models/: schemas.py
src/optimization/: black_litterman.py  historical.py  realtime.py
src/pdf/: indexer.py  parser.py  retriever.py
src/ui/: app.py  components.py  formatters.py
tests/: conftest.py  test_black_litterman.py  test_graph.py  test_optimization.py  test_parser.py  test_pdf_extraction.py
